--- a/index.html
+++ b/index.html
@@ -1,150 +1,181 @@
-```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECE 3849 Lab 1: Digital Oscilloscope</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-        }
-        h1, h2, h3 {
-            color: #333;
-        }
-        p, ul, ol {
-            margin-bottom: 15px;
-        }
-        code {
-            background-color: #f0f0f0;
-            padding: 2px 5px;
-            border-radius: 3px;
-        }
-        pre {
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            padding: 10px;
-            overflow-x: auto;
-            border-radius: 5px;
-        }
-        .buy-answer {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #28a745;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-        .buy-answer:hover {
-            background-color: #218838;
-        }
-    </style>
-</head>
-<body>
-
-<h1>ECE 3849 Lab 1: Digital Oscilloscope</h1>
-
+<h1 class="wp-block-post-title">ECE 3849 Lab 1: Digital Oscilloscope</h1>
+<p><a href="https://programming.engineering/product/ece-3849-lab-1-digital-oscilloscope/" target="_blank" rel="noopener noreferrer"><strong>Buy Answer</strong></a></p>
 <p>This lab will implement a 1 Msps digital oscilloscope by generating a signal, reading it with an ADC, and displaying it on the LCD screen.</p>
-
-<h2>Objectives</h2>
+<p>To complete all labs in this course, you will need to submit your source for that lab, and demonstrate the lab in operation to one of the course staff (a TA or tutor). You will be graded on the completion of the steps in this lab document. After you have received a signoff, follow the instructions at the end of the document to submit your source code.</p>
+<p>Objectives</p>
 <ul>
-    <li>Develop a realistic real-time application without an operating system</li>
-    <li>Meet tight timing constraints</li>
-    <li>Use interrupt prioritization and preemption</li>
-    <li>Write performance-sensitive code</li>
-    <li>Access shared data safely</li>
-    <li>Use real-time debugging techniques</li>
+<li>
+<p>Develop a realistic real-time application without an operating system</p>
+</li>
+<li>
+<p>Meet tight timing constraints</p>
+</li>
+<li>
+<p>Use interrupt prioritization and preemption</p>
+</li>
+<li>
+<p>Write performance-sensitive code</p>
+</li>
+<li>
+<p>Access shared data safely</p>
+</li>
+<li>
+<p>Use real-time debugging techniques</p>
+</li>
 </ul>
-
-<h2>Assignment</h2>
+<p>Assignment</p>
 <p>In this lab, you will write software that will turn the lab kit into a simple 1 Msps oscilloscope, resembling the following figure. When drawing, ensure samples are interconnected with lines for a smooth signal display.</p>
-
-<h3>Part 0: Copy CCS Project</h3>
-<p>Copy your Lab 0 CCS project by selecting it in Project Explorer and pressing Ctrl+C, then Ctrl+V. Use the convention for online code submission “ece3849_lab1_username1_username2,” substituting your username. Keep your older completed labs intact.</p>
-
-<h3>Part 1: Signal Source</h3>
-<p>In this part, you will generate a signal for your oscilloscope to measure using PWM output from the same board.</p>
-<pre><code>
-#include "inc/hw_memmap.h"
-#include "driverlib/gpio.h"
-#include "driverlib/pwm.h"
-#include "driverlib/pin_map.h"
-
-#define PWM_FREQUENCY 20000 // PWM frequency = 20 kHz
-
-SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOF);
-GPIOPinTypePWM(GPIO_PORTF_BASE, GPIO_PIN_2);
-GPIOPinConfigure(GPIO_PF2_M0PWM2);
-GPIOPadConfigSet(GPIO_PORTF_BASE, GPIO_PIN_2, GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD);
-
-SysCtlPeripheralEnable(SYSCTL_PERIPH_PWM0);
-PWMClockSet(PWM0_BASE, PWM_SYSCLK_DIV_1);
-PWMGenConfigure(PWM0_BASE, PWM_GEN_1, PWM_GEN_MODE_DOWN | PWM_GEN_MODE_NO_SYNC);
-PWMGenPeriodSet(PWM0_BASE, PWM_GEN_1, roundf((float)gSystemClock/PWM_FREQUENCY));
-PWMPulseWidthSet(PWM0_BASE, PWM_OUT_2, roundf((float)gSystemClock/PWM_FREQUENCY*0.4f));
-PWMOutputState(PWM0_BASE, PWM_OUT_2_BIT, true);
-PWMGenEnable(PWM0_BASE, PWM_GEN_1);
-</code></pre>
+<p>When writing your software, do not use a real-time operating system. You may use TivaWare, TI Graphics Library and other libraries. Document the source of any external libraries that you use in the lab report.</p>
+<p>ECE 3849 Lab 1</p>
+<p>Part 0: Copy CCS Project</p>
+<p>Copy your Lab 0 CCS project by selecting it in Project Explorer and pressing Ctrl+c, then Ctrl+v. CCS should prompt you to rename the new project: use the convention for online code submission &ldquo;ece3849_lab1_username1_username2,&rdquo; substituting your username. When the time comes to submit your source code, follow the instructions at the end of the Lab.</p>
+<p>You will be reusing the button and joystick processing part of Lab 0. Keep your older completed labs intact.</p>
+<p>Part 1: Signal Source</p>
+<p>In this part, you will generate a signal for your oscilloscope to measure.</p>
+<p>You will generate a very simple signal for the oscilloscope to measure: a PWM (pulse-width modulation) output from the same board. For a more interesting signal source, you may use the microphone on the BoosterPack (GPIO: PD5, ADC: AIN6). However, the microphone signal looks best with a lower sampling rate, which you only implement as extra credit.</p>
+<p>Insert the following code into your main(). The #includes/#define go with the other #includes. The second part goes into the hardware initialization portion of your main(), after the clock has been configured. It is best to place this code in a separate function, such as signal_init(), and call it from main(). This code produces a 20 kHz PWM square wave with a 40% duty cycle on the PF2 (M0PWM2) and PF3 (M0PWM3) outputs.</p>
+<p>#include &lt;math.h&gt;</p>
+<p>#include &ldquo;inc/hw_memmap.h&rdquo;</p>
+<p>#include &ldquo;driverlib/gpio.h&rdquo;</p>
+<p>#include &ldquo;driverlib/pwm.h&rdquo;</p>
+<p>#include &ldquo;driverlib/pin_map.h&rdquo;</p>
+<p>#define PWM_FREQUENCY 20000 // PWM frequency = 20 kHz</p>
+<ul>
+<li>
+<p>configure M0PWM2, at GPIO PF2, BoosterPack 1 header C1 pin 2 SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOF); GPIOPinTypePWM(GPIO_PORTF_BASE, GPIO_PIN_2); GPIOPinConfigure(GPIO_PF2_M0PWM2); GPIOPadConfigSet(GPIO_PORTF_BASE, GPIO_PIN_2,</p>
+</li>
+</ul>
+<p>GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD);</p>
+<ul>
+<li>
+<p>configure the PWM0 peripheral, gen 1, outputs 2 and 3 SysCtlPeripheralEnable(SYSCTL_PERIPH_PWM0);</p>
+<ul>
+<li>
+<p>use system clock without division</p>
+</li>
+</ul>
+</li>
+</ul>
+<p>ECE 3849 Lab 1</p>
+<p>PWMClockSet(PWM0_BASE, PWM_SYSCLK_DIV_1); PWMGenConfigure(PWM0_BASE, PWM_GEN_1,</p>
+<p>PWM_GEN_MODE_DOWN | PWM_GEN_MODE_NO_SYNC); PWMGenPeriodSet(PWM0_BASE, PWM_GEN_1,</p>
+<p>roundf((float)gSystemClock/PWM_FREQUENCY)); PWMPulseWidthSet(PWM0_BASE, PWM_OUT_2,</p>
+<p>roundf((float)gSystemClock/PWM_FREQUENCY*0.4f)); PWMOutputState(PWM0_BASE, PWM_OUT_2_BIT, true); PWMGenEnable(PWM0_BASE, PWM_GEN_1);</p>
 <p>Connect PE0 to PF2 on the EK-TM4C1294XL using a jumper wire.</p>
-
-<h3>Part 2: ADC Sampling</h3>
-<p>You will configure ADC1, using the ADC0 initialization in buttons.c as a reference. The following incomplete code should provide a starting point:</p>
-<pre><code>
-SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIO?);
-GPIOPinTypeADC(...); // GPIO setup for analog input AIN3
-
-SysCtlPeripheralEnable(SYSCTL_PERIPH_ADC0);
-SysCtlPeripheralEnable(SYSCTL_PERIPH_ADC1);
-
-uint32_t pll_frequency = SysCtlFrequencyGet(CRYSTAL_FREQUENCY);
-uint32_t pll_divisor = (pll_frequency - 1) / (16 * ADC_SAMPLING_RATE) + 1;
-
-ADCClockConfigSet(ADC0_BASE, ADC_CLOCK_SRC_PLL | ADC_CLOCK_RATE_FULL, pll_divisor);
-ADCClockConfigSet(ADC1_BASE, ADC_CLOCK_SRC_PLL | ADC_CLOCK_RATE_FULL, pll_divisor);
-
-ADCSequenceDisable(...);
-ADCSequenceConfigure(...); // specify the “Always” trigger
-ADCSequenceStepConfigure(...); // sample channel 3 (AIN3)
-ADCSequenceEnable(...);
-
-ADCIntEnable(...);
-IntPrioritySet(...);
-IntEnable(...);
-</code></pre>
-<p>The recommended structure of the ADC ISR:</p>
-<pre><code>
-#define ADC_BUFFER_SIZE 2048
-#define ADC_BUFFER_WRAP(i) ((i) & (ADC_BUFFER_SIZE - 1))
-
-volatile int32_t gADCBufferIndex = ADC_BUFFER_SIZE - 1;
-volatile uint16_t gADCBuffer[ADC_BUFFER_SIZE];
-volatile uint32_t gADCErrors = 0;
-
-void ADC_ISR(void) {
-    ADC1_ISC_R = ADCISC_IN0; // clear interrupt flag
-    if(ADC1_OSTAT_R & ADC_OSTAT_OV0) {
-        gADCErrors++;
-        ADC1_OSTAT_R = ADC_OSTAT_OV0; // clear overflow condition
-    }
-    gADCBufferIndex = ADC_BUFFER_WRAP(gADCBufferIndex + 1);
-    gADCBuffer[gADCBufferIndex] = ADC1_SSFIFO0_R;
-}
-</code></pre>
-
-<h3>Part 3: Draw Screen Background</h3>
-<p>Draw a grid on the screen with 20 pixels per division to display the signal onto.</p>
-
-<h3>Part 4: Draw the Signal to the Screen</h3>
-<p>Display the signal on the screen using a snapshot approach where the user presses a button to take a snapshot of the most recent 128 samples.</p>
-
-<h2>Submitting Source Code</h2>
-<p>Ensure your Lab 1 project is named “ece3849_lab1_username”. Clean your project, right-click on your project, select "Export...", choose General → "Archive File", and submit the resulting .zip file to Canvas.</p>
-
-<a href="#" class="buy-answer">Buy Answer</a>
-
-</body>
-</html>
-```
+<p>ECE 3849 Lab 1</p>
+<p>Part 2: ADC Sampling</p>
+<p>This section handles capturing 1,000,000 samples per second with the ADC without missing any.</p>
+<p>You will configure&nbsp;<strong>ADC1</strong>, using the ADC0 initialization in buttons.c as a reference. The following incomplete code should provide a starting point.</p>
+<p>SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIO?); GPIOPinTypeADC(&hellip;); // GPIO setup for analog input AIN3</p>
+<ul>
+<li>
+<p>initialize ADC peripherals SysCtlPeripheralEnable(SYSCTL_PERIPH_ADC0); SysCtlPeripheralEnable(SYSCTL_PERIPH_ADC1);</p>
+</li>
+<li>
+<p>ADC clock</p>
+</li>
+</ul>
+<p>uint32_t pll_frequency = SysCtlFrequencyGet(CRYSTAL_FREQUENCY); uint32_t pll_divisor = (pll_frequency &ndash; 1) / (16 * ADC_SAMPLING_RATE) + 1; // round up ADCClockConfigSet(ADC0_BASE, ADC_CLOCK_SRC_PLL | ADC_CLOCK_RATE_FULL,</p>
+<p>pll_divisor);</p>
+<p>ADCClockConfigSet(ADC1_BASE, ADC_CLOCK_SRC_PLL |</p>
+<p>ADC_CLOCK_RATE_FULL,</p>
+<p>pll_divisor);</p>
+<ul>
+<li>
+<p>choose ADC1 sequence 0; disable before configuring ADCSequenceDisable(&hellip;);</p>
+</li>
+</ul>
+<p>ADCSequenceConfigure(&hellip;); // specify the &ldquo;Always&rdquo; trigger</p>
+<ul>
+<li>
+<p>in the 0th step, sample channel 3 (AIN3)</p>
+</li>
+<li>
+<p>enable interrupt, and make it the end of sequence ADCSequenceStepConfigure(&hellip;);</p>
+</li>
+<li>
+<p>enable the sequence. it is now sampling ADCSequenceEnable(&hellip;);</p>
+</li>
+<li>
+<p>enable sequence 0 interrupt in the ADC1 peripheral ADCIntEnable(&hellip;);</p>
+</li>
+</ul>
+<p>IntPrioritySet(&hellip;); // set ADC1 sequence 0 interrupt priority</p>
+<ul>
+<li>
+<ul>
+<li>
+<p>enable ADC1 sequence 0 interrupt in int. controller IntEnable(&hellip;);</p>
+</li>
+</ul>
+</li>
+</ul>
+<p>The&nbsp;CRYSTAL_FREQUENCY&nbsp;and&nbsp;ADC_SAMPLING_RATE&nbsp;constants are defined in buttons.h. Include&nbsp;&ldquo;sysctl_pll.h&rdquo;&nbsp;to be able to call&nbsp;SysCtlFrequencyGet(). Please note that both ADCs must be initialized to the same clock configuration, as they share the clock divider.</p>
+<p>The correct arguments to the driver function calls can be found in the ADC chapter of the TivaWare Peripheral Driver Library User&rsquo;s Guide. To call the ADC driver functions, you need to include&nbsp;&ldquo;driverlib/adc.h&rdquo;. It is helpful to browse the driver header files to find the correct constant to use. To jump straight to where the right constants are defined, Ctrl+click on another closely related constant, e.g.&nbsp;ADC1_BASE.</p>
+<p>ECE 3849 Lab 1</p>
+<p>The ADC acquires a sample and interrupts every 1 &mu;s. The ADC ISR must process this sample before the next one is acquired. This gives the ADC ISR a relative deadline of only 120 CPU cycles. This is a tight timing requirement, but the Cortex-M4F is up to the challenge. We will need to perform some optimization to meet this goal. In a subsequent lab we will learn how to relax this timing constraint. The following is the recommended structure of the ADC ISR.</p>
+<p>#define ADC_BUFFER_SIZE 2048 // size must be a power of 2 // index wrapping macro</p>
+<p>#define ADC_BUFFER_WRAP(i) ((i) &amp; (ADC_BUFFER_SIZE &ndash; 1)) // latest sample index</p>
+<p>volatile int32_t gADCBufferIndex = ADC_BUFFER_SIZE &ndash; 1;</p>
+<p>volatile uint16_t gADCBuffer[ADC_BUFFER_SIZE]; // circular buffer volatile uint32_t gADCErrors = 0; // number of missed ADC deadlines</p>
+<p>void ADC_ISR(void)</p>
+<p>{</p>
+<ul>
+<li>
+<p>clear ADC1 sequence0 interrupt flag in the ADCISC register &lt;&hellip;&gt;;</p>
+</li>
+<li>
+<p>check for ADC FIFO overflow</p>
+</li>
+</ul>
+<p>if(ADC1_OSTAT_R &amp; ADC_OSTAT_OV0) {</p>
+<p>gADCErrors++; // count errors</p>
+<p>ADC1_OSTAT_R = ADC_OSTAT_OV0; // clear overflow condition</p>
+<p>}</p>
+<p>gADCBufferIndex = ADC_BUFFER_WRAP(gADCBufferIndex + 1)</p>
+<ul>
+<li>
+<p>read sample from the ADC1 sequence 0 FIFO gADCBuffer[gADCBufferIndex] = &lt;&hellip;&gt;;</p>
+</li>
+</ul>
+<p>}</p>
+<p>The ADC ISR is very simple:</p>
+<ol>
+<li>
+<p>Acknowledge the ADC interrupt (so it would not interrupt again on return).</p>
+</li>
+</ol>
+<ol start="2">
+<li>
+<p>Detect if a deadline was missed by checking the overflow flag of the ADC hardware.</p>
+</li>
+</ol>
+<ol start="3">
+<li>
+<p>Read a sample from the ADC and store it in a buffer array.</p>
+</li>
+</ol>
+<p>Your tasks are to find how to clear the interrupt flag that originally caused this ISR to be called, and to read in the ADC sample. You must do this using&nbsp;<strong>direct register access</strong>, not driver function calls. In this case the overhead associated with driver function calls is enough to start missing deadlines (you can verify this). To access registers directly, include&nbsp;&ldquo;inc/tm4c1294ncpdt.h&rdquo;.</p>
+<p>To convert register names from the TM4C1294NCPDT Datasheet to C code:&nbsp;&lt;datasheet peripheral name&gt;<strong>&lt;register name&gt;</strong>&nbsp;&rarr; &lt;C peripheral name&gt;&lt;number&gt;_<strong>&lt;register name&gt;</strong>_R</p>
+<p>For example, the datasheet register&nbsp;GPTM<strong>ICR</strong>&nbsp;in Timer0 is converted to&nbsp;TIMER0_<strong>ICR</strong>_R&nbsp;in</p>
+<p>ECE 3849 Lab 1</p>
+<p>C code. Similarly, the register fields are defined as:</p>
+<p>&lt;C peripheral name&gt;_&lt;register name&gt;_&lt;field name&gt;</p>
+<p>For example, the&nbsp;TATOCINT&nbsp;(timer timeout interrupt) bit of the&nbsp;GPTMICR&nbsp;register can be accessed using&nbsp;TIMER_ICR_TATOCINT&nbsp;in C code.</p>
+<p>As before, it is convenient to browse the appropriate header files to locate the correct register definition. Ctrl+click on&nbsp;ADC1_OSTAT_R&nbsp;to bring up a list of valid ADC1 registers available for direct access. You would still need to browse the TM4C1294NCPDT Datasheet to help locate the right registers to use, as the header file is not commented. Also see TivaWare Peripheral Driver Library User&rsquo;s Guide Chapter 2.2 for more information on direct register access.</p>
+<p>Create a new module (.c file), e.g. sampling.c, for your ADC initialization code and ISR. To this file, add the function to initialize ADC1. Also include in this file the ADC ISR. Once these have been completed, call the initialization code in main(), and place the ADC ISR in the appropriate&nbsp;<strong>interrupt vector</strong>&nbsp;in tm4c1294ncpdt_startup_ccs.c.</p>
+<p>Now, run the code and verify the ISR is being called and&nbsp;gADCErrors&nbsp;stays at 0. If the counter is steadily incrementing, try to find the cause. One possibility is incorrect interrupt priority assignment (the ADC ISR must preempt the button ISR; Lab0 has an explanation of interrupt priorities). If your signal source is connected, you should be able to observe the sampled waveform in&nbsp;gADCBuffer&nbsp;using the debugger. Pause the program, and verify that&nbsp;gADCBuffer&nbsp;is filled with alternating periods of low ( &lt; 10) and high (&gt; 4086) values. To verify&nbsp;it visually, go to Tools&nbsp;&rarr;&nbsp;Graph&nbsp;&rarr;&nbsp;&ldquo;Single Time.&rdquo; The lower-right graph is the PWM source.</p>
+<p>ECE 3849 Lab 1</p>
+<p>Part 3: Draw Screen Background</p>
+<p>Now that we are reading ADC samples, we need something to draw them onto. Draw a grid on the screen with 20 pixels per division to display the signal onto.</p>
+<p>See the graphics library documentation for the various screen drawing functions. To change the color that is being drawn, call&nbsp;GrContextForegroundSet&nbsp;before drawing to the screen. It is recommended you use a define, such as&nbsp;PIXELS_PER_DIV&nbsp;to set the spacing between lines.</p>
+<p>The final result should look something like the below figure:</p>
+<p>Part 4: Draw the Signal to the Screen</p>
+<p>Now that there&rsquo;s a grid for the signal to be drawn on, we should display the signal on the screen.</p>
+<p>As the ADC Buffer is constantly being overwritten by the ISR, we must take caution to ensure that we don&rsquo;t encounter any shared data bugs when drawing to the screen. To prevent the data being drawn to the screen from being overwritten, samples should be copied into a buffer, with the buffer then being drawn to the screen.</p>
+<p>ECE 3849 Lab 1</p>
+<p>It is also important to ensure the display on the screen is stable. If we simply drew directly from the buffer to the screen every frame, the display would constantly shift and be unreadable. To solve this problem, we will use a snapshot approach. Here, the user will press a button to take a &ldquo;snapshot&rdquo; of the most recent 128 samples, which will then be displayed to the screen. As copying from the samples to the display buffer will take some time, this should be implemented in the&nbsp;main()&nbsp;function to avoid adding delay to the button ISR.</p>
+<p>The final detail that needs attention is scaling the samples to draw them on the screen. As the max range of the ADC is a product of the screen height, scaling can be implemented simply by dividing the sample values to be in the range of [0,&nbsp;LCD_VERTICAL_MAX &ndash; 1]. In the next lab, we will implement a system to scale our samples to the divisions on the screen, as well as improving how we select samples to draw to the screen.</p>
+<p>Add new code to buttons.c to register a button press and signal&nbsp;main()&nbsp;to copy the most recent 128 samples to a buffer. Scale the samples from this buffer and draw them on to the screen.</p>
+<p>Part 10: Submitting Source Code</p>
+<p>Make sure your Lab 1 project is named &ldquo;<strong>ece3849_lab1_username</strong>&rdquo; with your username substituted.&nbsp;<strong>Clean</strong>&nbsp;your project (remove compiled code). Right click on your project and select &ldquo;Export&hellip;&rdquo; Select General&nbsp;&rarr;&nbsp;&ldquo;Archive File.&rdquo; Click Next. Click Browse. Find a location for you archive and specify the exact same file name as your project name. Click Finish. Submit the resulting .zip file to Canvas. This concludes Lab 1.</p>
